--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
           <p>{{ site.description | default: site.github.project_tagline }}</p>
           <hr>
-          <span class="credits right">Authored by <a href="https://twitter.com/realvectors">pramod-thaz</a></span>
+          <span class="credits right">Authored by <a href="http://www.onesqft.com">pramod-thaz (ONESQFT)</a></span>
         </div>
 
         {{ content }}
